# Python

./: Actividad1.py  Actividad2_CVS.py  Actividad2_P2_CVS.py  Actividad3_JSON.py  P2E1.py  P2E10.py  P2E11.py  P2E12.py  P2E2.py  P2E3.py  P2E4.py  P2E5.py  P2E6.py  P2E7.py  P2E8.py  P2E9.py  README.md  bandas.json
Pagina_Cidepint/: .gitignore  README.md  pyproject.toml
Pagina_Cidepint/admin/: app.py  pyproject.toml
Pagina_Cidepint/admin/src/core/: database.py  seeds.py
Pagina_Cidepint/admin/src/core/configuracion/: __init__.py  configuration.py
Pagina_Cidepint/admin/src/core/instituciones/: __init__.py  institution.py  key_word.py
Pagina_Cidepint/admin/src/core/rol_y_permiso/: __init__.py  palabras_clave.py  permission.py  role.py
Pagina_Cidepint/admin/src/core/usuarios/: user.py  (+1 more)
Pagina_Cidepint/admin/src/web/: __init__.py  config.py  error.py  mail.py
Pagina_Cidepint/admin/static/css/: error.css  login.css  styles.css
Pagina_Cidepint/admin/static/js/: request_notes.js
Pagina_Cidepint/admin/tests/: test_web.py
Pagina_Cidepint/portal/: index.html  package-lock.json  package.json
Pagina_Cidepint/portal/src/: api.js  main.js
Pagina_Cidepint/portal/src/components/: AppFooter.vue  AppHeader.vue  GraphicOne.vue  GraphicThree.vue  GraphicTwo.vue  HomeContent.vue  InstitutionMap.vue  RequestNotes.vue
Pagina_Cidepint/portal/src/router/: index.js
Pagina_Cidepint/portal/src/stores/: log.js
Pagina_Cidepint/portal/src/views/: DetalleServiceView.vue  FiltroServiceView.vue  HomeView.vue  LoginView.vue  RequestView.vue  ServicesView.vue  StatisticsView.vue
(+78 files in other folders)
